--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^8.8.1"
   }
 }
